3rdparty/jasper-version-4.2.0/data/test/bad/345-0.pnm
P22 4222222222444444444444444444444444444444444444444444444 444444444444444444444444444444444      “        4444444444444444444444444444444444444444444444444444444444444444444444444444444444444    